still trying to fix login spacing 2nd time

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,9 +9,11 @@ body {
   border-style: none;
   padding: 1px 7px 2px;
 }
+
 .button:hover {
   background-color: #ad2a3e !important;
 }
+
 .nav-color {
   background-color: #f23b58;
 }
@@ -39,7 +41,11 @@ a.nav-link {
   color: #efc958;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: 'Pacifico', cursive !important;
 }
 
@@ -55,11 +61,13 @@ h1, h2, h3, h4, h5 {
   margin-right: auto;
   text-align: center;
 }
+
 input {
   border-radius: 4px;
   box-shadow: none;
   border: 1px solid #adadad;
 }
+
 input:hover {
   background-color: #f9f7f4 !important;
 }
@@ -70,41 +78,43 @@ label {
 }
 
 .col-md-3 {
-  max-width: 24.2% !important; 
+  max-width: 24.2% !important;
 }
 
 .fb-login-button {
-  width: 12rem; 
+  width: 12rem;
   background-color: #4267b2;
-  color: white; 
+  color: white;
   height: 32px;
   padding: 0.2rem;
-  border-radius: 3px; 
+  border-radius: 3px;
   font-family: Helvetica, Arial, sans-serif;
-  margin: auto; 
+  margin: auto;
 }
 
-a:hover { text-decoration: none !important; }
+a:hover {
+  text-decoration: none !important;
+}
 
 .events-show {
-  width: 100%; 
+  width: 100%;
   height: 100%;
   border-radius: 5px;
   border-color: #c9c6c3;
-  border-style: solid; 
+  border-style: solid;
   border-width: 1px;
   font-size: 1rem;
-  display: flex; 
-  flex-direction: row; 
+  display: flex;
+  flex-direction: row;
   justify-content: space-around;
 }
 
 div.label {
   color: rgb(141, 140, 140);
   font-size: 1rem;
-  display: flex; 
-  height: 100%; 
-  width: auto; 
+  display: flex;
+  height: 100%;
+  width: auto;
   flex-direction: column;
   justify-content: flex-end;
   text-align: right;
@@ -113,9 +123,9 @@ div.label {
 div.info {
   font-size: 1rem;
   font-weight: bold;
-  display: flex; 
-  height: 100%; 
-  width: auto; 
+  display: flex;
+  height: 100%;
+  width: auto;
   flex-direction: column;
   justify-content: flex-end;
   text-align: left;
@@ -135,13 +145,14 @@ h1.center {
 
 .actions {
   margin-top: 2rem;
-  margin-right: auto; 
+  margin-right: auto;
   margin-left: auto;
   width: 50%;
-  display: flex; 
-  flex-direction: row; 
-  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+
 .actions form.button_to .button {
   width: 6rem;
 }
@@ -151,16 +162,17 @@ ul {
 }
 
 .date.event {
-   font-size: 0.7rem;
-   width: 100%; 
-   background-color: #79cfee;
-   padding: 0.4rem;
-   margin-bottom: 0.2rem;
- }
-
- .date.event a {
-  color: white; 
+  font-size: 0.7rem;
+  width: 100%;
+  background-color: #79cfee;
+  padding: 0.4rem;
+  margin-bottom: 0.2rem;
 }
+
+.date.event a {
+  color: white;
+}
+
 td {
   padding: 0 !important;
 }
@@ -183,15 +195,16 @@ td {
   padding: 0.4rem;
   margin-bottom: 1rem;
 }
+
 ul.errors {
   font-style: italic;
 }
 
 h5.welcome {
- font-family: 'Open Sans' !important;
- font-size: 1.2rem;
+  font-family: 'Open Sans' !important;
+  font-size: 1.2rem;
 }
 
 .form-div {
-  text-align: left; 
+  text-align: left;
 }
